--- a/complaints/templates/complaints/create_evaluation.html
+++ b/complaints/templates/complaints/create_evaluation.html
@@ -110,7 +110,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <!-- Header -->
     <div class="row mb-4">
         <div class="col-12">
