--- a/customers/templates/customers/customer_confirm_delete.html
+++ b/customers/templates/customers/customer_confirm_delete.html
@@ -3,7 +3,7 @@
 {% block title %}حذف العميل - نظام الخواجه{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <div class="row mb-4">
         <div class="col-md-8">
             <nav aria-label="breadcrumb">
