--- a/inspections/templates/inspections/notifications/notification_form.html
+++ b/inspections/templates/inspections/notifications/notification_form.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="card">
