--- a/inspections/templates/inspections/notifications/notification_list.html
+++ b/inspections/templates/inspections/notifications/notification_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <h1>إشعارات المعاينات</h1>
 
     {% if notifications %}
