--- a/installations/templates/installations/add_modification_report.html
+++ b/installations/templates/installations/add_modification_report.html
@@ -4,7 +4,7 @@
 {% block title %}إضافة تقرير تعديل - {{ installation.order.order_number }}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <div class="card shadow">
