--- a/installations/templates/installations/schedule_installation.html
+++ b/installations/templates/installations/schedule_installation.html
@@ -5,7 +5,7 @@
 {% block title %}جدولة التركيب - {{ installation.order.order_number }}{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <div class="card shadow">
