--- a/inventory/templates/inventory/inventory_list.html
+++ b/inventory/templates/inventory/inventory_list.html
@@ -5,7 +5,7 @@
 {% block title %}إدارة المخزون - نظام الخواجه{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <div class="row mb-4">
         <div class="col-md-8">
             <h2 class="mb-3">إدارة المخزون</h2>
