--- a/inventory/templates/inventory/product_confirm_delete.html
+++ b/inventory/templates/inventory/product_confirm_delete.html
@@ -2,7 +2,7 @@
 {% block title %}حذف المنتج{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
