--- a/manufacturing/templates/manufacturing/manufacturingorder_detail.html
+++ b/manufacturing/templates/manufacturing/manufacturingorder_detail.html
@@ -162,7 +162,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <div class="row">
         <div class="col-md-12">
             <div class="card">
