--- a/orders/templates/orders/wizard/cancel_confirm.html
+++ b/orders/templates/orders/wizard/cancel_confirm.html
@@ -62,7 +62,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <div class="card cancel-card">
         <div class="card-header cancel-card-header text-center">
             <h4 class="mb-0">
