--- a/reports/templates/reports/seller_customer_activity_index.html
+++ b/reports/templates/reports/seller_customer_activity_index.html
@@ -4,7 +4,7 @@
 {% block title %}تقارير نشاط البائعين{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <h2>تقارير نشاط البائعين</h2>
     <p>قائمة بالتقارير الجاهزة لعرض نشاط البائعين.</p>
     <ul>
