--- a/templates/accounts/department_list.html
+++ b/templates/accounts/department_list.html
@@ -4,7 +4,7 @@
 {% block title %}قائمة الأقسام - نظام الخواجه{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2><i class="fas fa-sitemap"></i> قائمة الأقسام</h2>
         <a href="{% url 'accounts:department_create' %}" class="btn btn-primary">
